--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             <div class="row">
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
-                        <h1 class="display-4">Suas contas descomplicadas</h1>
+                        <h1 class="display-sm-5 display-md-4">Suas contas descomplicadas</h1>
                         <p>Usado por mais de 1 milhão de pessoas, o Finans é uma ferramenta online que vai facilitar sua vida financeira.</p>
 
                         <form action="" class="mt-4 mb-4">
-                            <div class="input-group input-group-lg">
+                            <div class="display-sm-5 display-md-4 input-group input-group-lg">
                                 <input type="text" placeholder="Seu e-mail" name="" id="" class="form-control">
                                 <div class="input-group-append">
                                     <button type="button" class="btn btn-primary">Cadastre-se</button>
